--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,10 @@ jobs:
           github_user_name: boranyildirim
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - uses: docker/build-push-action@v2
-        id: docker_build
+      - uses: crazy-max/ghaction-github-pages@v2.5.0
+        if: success() && github.ref == 'refs/heads/master'
         with:
-          push: ${{ github.ref == 'refs/heads/master' }}
-          tags: |
-            platane/snk:latest
-            platane/snk:${{ github.sha }}
-          file: packages/action/Dockerfile
-          context: packages/action
+          target_branch: gh-pages
+          build_dir: packages/demo/dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
