--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,11 @@ jobs:
           github_user_name: boranyildirim
           svg_out_path: dist/github-contribution-grid-snake.svg
 
+
+      - uses: crazy-max/ghaction-github-pages@v2.5.0
+        if: success() && github.ref == 'refs/heads/master'
+        with:
+          target_branch: gh-pages
+          build_dir: packages/demo/dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
